[package]
name = "lib-simulation-wasm"
version = "0.1.0"
authors = ["dreal <dpatki64@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
nalgebra = "0.26"
rand = "0.8"
serde = { version = "1.0", features = ["derive"]  }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"]  }

lib-simulation = { path = "../simulation"  }